fixed masonry visibility

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,21 +91,21 @@ nav {
 }
 
 .masonry .item {
-  width:  300px !important;
-  height: 300px !important;
-  float: left !important;
-  background: #D26 !important;
-  position: relative !important;
-  margin-bottom: 10px !important;
-  -webkit-box-sizing: border-box !important;
-     -moz-box-sizing: border-box !important;
-          box-sizing: border-box !important;
-background: no-repeat center center !important;
-  -webkit-background-size: cover !important;
-  -moz-background-size: cover !important;
-  -o-background-size: cover !important;
-  background-size: cover !important;
-  background-color: black !important;
+  width:  300px ;
+  height: 300px ;
+  float: left;
+  background: #D26;
+  position: relative;
+  margin-bottom: 10px;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+background: no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: black;
 }
 
 .item {
@@ -290,7 +290,7 @@ h4.white {
 
 .img-left {
   margin-left: 5% !important;
-  margin-top: -20% !important;
+  margin-top: -20% !important;g
 }
 
 .btn-outline {
